// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MovieTitleComponent /> should match snapshot - favorite (false) 1`] = `
<Icon
  onClick={[Function]}
  type="book"
/>
`;

exports[`<MovieTitleComponent /> should match snapshot - favorite (true) 1`] = `
<Icon
  onClick={[Function]}
  theme="filled"
  type="book"
/>
`;
